--- a/DrinkForm.ui
+++ b/DrinkForm.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ScoreFormWid</class>
- <widget class="QWidget" name="ScoreFormWid">
+ <class>DrinkFormWid</class>
+ <widget class="QWidget" name="DrinkFormWid">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -13,26 +13,14 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QLabel" name="lblScore">
+  <widget class="QLabel" name="lblDrink">
    <property name="geometry">
     <rect>
      <x>2</x>
      <y>4</y>
-     <width>40</width>
-     <height>16</height>
+     <width>41</width>
+     <height>17</height>
     </rect>
-   </property>
-   <property name="sizePolicy">
-    <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
-     <horstretch>0</horstretch>
-     <verstretch>0</verstretch>
-    </sizepolicy>
-   </property>
-   <property name="maximumSize">
-    <size>
-     <width>16777215</width>
-     <height>16777215</height>
-    </size>
    </property>
    <property name="font">
     <font>
@@ -42,7 +30,10 @@
     </font>
    </property>
    <property name="text">
-    <string>Score</string>
+    <string>Drink</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
    </property>
   </widget>
  </widget>
